--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,7 +113,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: url("background.svg") no-repeat center center fixed;
+		background: url("Background image 2.png") no-repeat center center fixed;
 		background-size: cover;
 		position: relative;
 	}
@@ -3902,11 +3902,35 @@ body::before {
 
 	#intro {
 		background-attachment: fixed;
-		background-image: url("images/intro.svg");
-		background-position: top right;
+		background-image: url("/bg for tablets.png");
+		background-position: center;
 		background-repeat: no-repeat;
+		background-size: cover;
+		position: relative;
 		background-size: 100% 100%;
 	}
+@media only screen and (min-width: 1366px) {
+	#intro {
+		background-image: url('/bg.png');
+	}
+}
+
+#intro::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(60, 59, 59, 0.55);
+	z-index: 1;
+}
+
+#intro > .inner {
+	position: relative;
+	z-index: 2; /* Ensures text and other content is above the overlay */
+	/* Add your existing styles for .inner here if needed */
+}
 
 		#intro p {
 			font-size: 1.25em;
